--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate": "^1.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
